--- a/templates/pages/about.html
+++ b/templates/pages/about.html
@@ -5,8 +5,8 @@
 <div class="photo-album-container">
     <div class="photo-album">
     
-        <h1><span>About Me - Ian Macaulay</span></h1>
-        
+        <h1 class="collage-title"><span>About Me</span></h1>
+
         <a href="http://www.flickr.com/photos/nataliedowne/2254117707/in/set-72157604232220981" class="large polaroid img1"><img src="http://media.24ways.org/2009/14/img/volcanic.jpg" alt="" class="img-fluid">This breathtaking volcanic lake is at Wai-O-Tapu Thermal Wonderland</a>
         <a href="http://www.flickr.com/photos/nataliedowne/2254700486/in/set-72157604232220981/" class="polaroid img2"><img src="http://media.24ways.org/2009/14/img/waterfall.jpg" alt="" class="img-fluid">This lovely waterfall was at Rotorua in Rainbow Springs</a>
         <a href="http://www.flickr.com/photos/nataliedowne/2254704566/in/set-72157604232220981/" class="small polaroid img3"><img src="http://media.24ways.org/2009/14/img/leaf.jpg" alt="" class="img-fluid">Ferntastic</a>
