--- a/IanPortfolio/static/css/main.css
+++ b/IanPortfolio/static/css/main.css
@@ -1,4 +1,44 @@
+@font-face {
+    font-family: 'Willow';
+    src:url('../fonts/Willow.ttf.woff') format('woff'),
+        url('../fonts/Willow.ttf.svg#Willow') format('svg'),
+        url('../fonts/Willow.ttf.eot'),
+        url('../fonts/Willow.ttf.eot?#iefix') format('embedded-opentype'); 
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'HillHouse';
+    src:url('../fonts/HillHouse.ttf.woff') format('woff'),
+        url('../fonts/HillHouse.ttf.svg#HillHouse') format('svg'),
+        url('../fonts/HillHouse.ttf.eot'),
+        url('../fonts/HillHouse.ttf.eot?#iefix') format('embedded-opentype'); 
+    font-weight: normal;
+    font-style: normal;
+}
+
+body,
+html {
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 100vh;
+    overflow-x: hidden;
+    font-family: 'Willow';
+    text-transform: uppercase;
+}
+
 .about-text{
     margin: 10rem auto 10rem auto;
     text-align: center;
+    padding: 5rem;
+    border: 2px solid rgb(132, 184, 23); 
 }
+
+@media only screen and (max-width: 800px) {
+    .about-text{
+        margin: 10rem auto 10rem auto;
+        padding: 2rem;
+    }
+  }
