--- a/IanPortfolio/static/css/shapes.css
+++ b/IanPortfolio/static/css/shapes.css
@@ -1,13 +1,23 @@
-body,
-html {
-    margin: 0;
-    padding: 0;
-    width: 100%;
-    height: 100vh;
-    overflow-x: hidden;
-    font-family: 'Lato', sans-serif;
-    text-transform: uppercase;
+@font-face {
+    font-family: 'Willow';
+    src:url('../fonts/Willow.ttf.woff') format('woff'),
+        url('../fonts/Willow.ttf.svg#Willow') format('svg'),
+        url('../fonts/Willow.ttf.eot'),
+        url('../fonts/Willow.ttf.eot?#iefix') format('embedded-opentype'); 
+    font-weight: normal;
+    font-style: normal;
 }
+
+@font-face {
+    font-family: 'HillHouse';
+    src:url('../fonts/HillHouse.ttf.woff') format('woff'),
+        url('../fonts/HillHouse.ttf.svg#HillHouse') format('svg'),
+        url('../fonts/HillHouse.ttf.eot'),
+        url('../fonts/HillHouse.ttf.eot?#iefix') format('embedded-opentype'); 
+    font-weight: normal;
+    font-style: normal;
+}
+
 #shape_contain {
     box-sizing: border-box;
     width: 100%;
@@ -129,9 +139,9 @@ html {
     width: 100%;
     z-index: 200;
     padding-top: 65vh;
-    font-family: 'Arvo', serif;
     text-align: center;
     color: rgba(132, 184, 23, 0.8);
-    font-size: 4vw;
+    font-size: 6vw;
     text-shadow: 0px 3px 50px rgba(0, 0, 0, 0.5);
+    font-family: 'HillHouse';
 }
