--- a/templates/pages/about.html
+++ b/templates/pages/about.html
@@ -6,34 +6,35 @@
     <div class="photo-album">
     
         <h1 class="collage-title"><span>About Me</span></h1>
-
-        <a href="http://www.flickr.com/photos/nataliedowne/2254117707/in/set-72157604232220981" class="large polaroid img1"><img src="http://media.24ways.org/2009/14/img/volcanic.jpg" alt="" class="img-fluid">This breathtaking volcanic lake is at Wai-O-Tapu Thermal Wonderland</a>
-        <a href="http://www.flickr.com/photos/nataliedowne/2254700486/in/set-72157604232220981/" class="polaroid img2"><img src="http://media.24ways.org/2009/14/img/waterfall.jpg" alt="" class="img-fluid">This lovely waterfall was at Rotorua in Rainbow Springs</a>
-        <a href="http://www.flickr.com/photos/nataliedowne/2254704566/in/set-72157604232220981/" class="small polaroid img3"><img src="http://media.24ways.org/2009/14/img/leaf.jpg" alt="" class="img-fluid">Ferntastic</a>
+                
+        <a href="#" class="large polaroid img1"><img src="http://media.24ways.org/2009/14/img/volcanic.jpg" alt="" class="img-fluid">This breathtaking volcanic lake is at Wai-O-Tapu Thermal Wonderland</a>
+        <a href="#" class="polaroid img2"><img src="http://media.24ways.org/2009/14/img/waterfall.jpg" alt="" class="img-fluid">This lovely waterfall was at Rotorua in Rainbow Springs</a>
+        <a href="#" class="small polaroid img3"><img src="http://media.24ways.org/2009/14/img/leaf.jpg" alt="" class="img-fluid">Ferntastic</a>
         
-        <a href="http://www.flickr.com/photos/nataliedowne/2311404989/in/set-72157604232220981/" class="medium polaroid img4"><img src="http://media.24ways.org/2009/14/img/whale.jpg" alt="" class="img-fluid">At Kaikoura we went whale watching!</a>
+        <a href="#" class="medium polaroid img4"><img src="http://media.24ways.org/2009/14/img/whale.jpg" alt="" class="img-fluid">At Kaikoura we went whale watching!</a>
         
-        <a href="http://www.flickr.com/photos/nataliedowne/2312219680/in/set-72157604232220981" class="polaroid img5"><img src="http://media.24ways.org/2009/14/img/seal.jpg" alt="" class="img-fluid">Found this little cutie on a walk in New Zealand!</a>
+        <a href="#" class="polaroid img5"><img src="http://media.24ways.org/2009/14/img/seal.jpg" alt="" class="img-fluid">Found this little cutie on a walk in New Zealand!</a>
         
         
-        <a href="http://www.flickr.com/photos/nataliedowne/2254789880/in/set-72157604232220981/" class="polaroid img6"><img src="http://media.24ways.org/2009/14/img/lake.jpg" alt="" class="img-fluid">An amazing bubbling volcanic spring, a bit muddy</a>
+        <a href="#" class="polaroid img6"><img src="http://media.24ways.org/2009/14/img/lake.jpg" alt="" class="img-fluid">An amazing bubbling volcanic spring, a bit muddy</a>
         
-        <a href="http://www.flickr.com/photos/nataliedowne/2341399904/in/set-72157604232220981/" class="polaroid img7"><img src="http://media.24ways.org/2009/14/img/simon.jpg" alt="" class="img-fluid">Simon in a giant Kiwi, pretending to be a Kiwi (the bird)</a>
-        <a href="http://www.flickr.com/photos/nataliedowne/2352603191/in/set-72157604232220981/" class="small polaroid img8"><img src="http://media.24ways.org/2009/14/img/albatross.jpg" alt="" class="img-fluid">Albatross in Dunedin</a>
-        <a href="http://www.flickr.com/photos/nataliedowne/2340993237/in/set-72157604232220981/" class="medium polaroid img9"><img src="http://media.24ways.org/2009/14/img/raft.jpg" alt="" class="img-fluid">White water rafting in Queenstown</a>
-        <a href="http://www.flickr.com/photos/nataliedowne/2306995686/in/set-72157604033893095/" class="polaroid img10"><img src="http://media.24ways.org/2009/14/img/whiteisland.jpg" alt="" class="img-fluid">White Island</a>
-        <a href="http://www.flickr.com/photos/nataliedowne/2306989200/in/set-72157604033893095/" class="small polaroid img11"><img src="http://media.24ways.org/2009/14/img/sulphur.jpg" alt="" class="img-fluid">Sulphurous</a>
-        <a href="http://www.flickr.com/photos/nataliedowne/2352608953/in/set-72157604232220981/" class="small polaroid img12"><img src="http://media.24ways.org/2009/14/img/sealions.jpg" alt="" class="img-fluid">Sea lions!</a>
-        <a href="http://www.flickr.com/photos/nataliedowne/2341816430/in/set-72157604232220981/" class="small polaroid img13"><img src="http://media.24ways.org/2009/14/img/horses.jpg" alt="" class="img-fluid">Horse riding</a>
-        <a href="http://www.flickr.com/photos/nataliedowne/2352490411/in/set-72157604232220981/" class="small polaroid img14"><img src="http://media.24ways.org/2009/14/img/camping.jpg" alt="" class="img-fluid">Stewart Island</a>
-        <a href="http://www.flickr.com/photos/nataliedowne/2339184562/in/set-72157604232220981/" class="polaroid img15"><img src="http://media.24ways.org/2009/14/img/us.jpg" alt="" class="img-fluid">Us in a blue cave on the Franz Josef glacier</a>
+        <a href="#" class="polaroid img7"><img src="http://media.24ways.org/2009/14/img/simon.jpg" alt="" class="img-fluid">Simon in a giant Kiwi, pretending to be a Kiwi (the bird)</a>
+        <a href="#" class="small polaroid img8"><img src="http://media.24ways.org/2009/14/img/albatross.jpg" alt="" class="img-fluid">Albatross in Dunedin</a>
+        <a href="#" class="medium polaroid img9"><img src="http://media.24ways.org/2009/14/img/raft.jpg" alt="" class="img-fluid">White water rafting in Queenstown</a>
+        <a href="#" class="polaroid img10"><img src="http://media.24ways.org/2009/14/img/whiteisland.jpg" alt="" class="img-fluid">White Island</a>
+        <a href="#" class="small polaroid img11"><img src="http://media.24ways.org/2009/14/img/sulphur.jpg" alt="" class="img-fluid">Sulphurous</a>
+        <a href="#" class="small polaroid img12"><img src="http://media.24ways.org/2009/14/img/sealions.jpg" alt="" class="img-fluid">Sea lions!</a>
+        <a href="#" class="small polaroid img13"><img src="http://media.24ways.org/2009/14/img/horses.jpg" alt="" class="img-fluid">Horse riding</a>
+        <a href="#" class="small polaroid img14"><img src="http://media.24ways.org/2009/14/img/camping.jpg" alt="" class="img-fluid">Stewart Island</a>
+        <a href="#" class="polaroid img15"><img src="http://media.24ways.org/2009/14/img/us.jpg" alt="" class="img-fluid">Us in a blue cave on the Franz Josef glacier</a>
     </div>
-    <div class="about-text container">
+    <div class="about-text container card">
         <div class="row">
             <div class="col-md-12">
                 <h1>Welcome &amp; Thanks for visiting</h1>
             </div>
         </div>
+        <br/>
         <div class="row">
             <div class="col-md-12">
                 <p>Thanks for taking the time to look at my work.
