--- a/templates/pages/about.html
+++ b/templates/pages/about.html
@@ -7,26 +7,26 @@
     
         <h1 class="collage-title"><span>About Me</span></h1>
                 
-        <a href="#" class="large polaroid img1"><img src="http://media.24ways.org/2009/14/img/volcanic.jpg" alt="" class="img-fluid">This breathtaking volcanic lake is at Wai-O-Tapu Thermal Wonderland</a>
-        <a href="#" class="polaroid img2"><img src="http://media.24ways.org/2009/14/img/waterfall.jpg" alt="" class="img-fluid">This lovely waterfall was at Rotorua in Rainbow Springs</a>
-        <a href="#" class="small polaroid img3"><img src="http://media.24ways.org/2009/14/img/leaf.jpg" alt="" class="img-fluid">Ferntastic</a>
+        <a href="#" class="large polaroid img1"><img src="{% static '/images/tyre.jpg' %}" alt="" class="img-fluid">Lorem ipsum dolor sit amet</a>
+        <a href="#" class="polaroid img2"><img src="{% static '/images/hat.jpg' %}" alt="" class="img-fluid">Lorem ipsum dolor sit amet</a>
+        <a href="#" class="small polaroid img3"><img src="{% static '/images/2018.png' %}" alt="" class="img-fluid">Lorem ipsum dolor sit amet</a>
         
-        <a href="#" class="medium polaroid img4"><img src="http://media.24ways.org/2009/14/img/whale.jpg" alt="" class="img-fluid">At Kaikoura we went whale watching!</a>
+        <a href="#" class="medium polaroid img4"><img src="{% static '/images/red.png' %}" alt="" class="img-fluid">Lorem ipsum dolor sit amet</a>
         
-        <a href="#" class="polaroid img5"><img src="http://media.24ways.org/2009/14/img/seal.jpg" alt="" class="img-fluid">Found this little cutie on a walk in New Zealand!</a>
+        <a href="#" class="polaroid img5"><img src="{% static '/images/fire.png' %}" alt="" class="img-fluid">Lorem ipsum dolor sit amet</a>
         
         
-        <a href="#" class="polaroid img6"><img src="http://media.24ways.org/2009/14/img/lake.jpg" alt="" class="img-fluid">An amazing bubbling volcanic spring, a bit muddy</a>
+        <a href="#" class="polaroid img6"><img src="{% static '/images/costume.png' %}" alt="" class="img-fluid">Lorem ipsum dolor sit amet</a>
         
-        <a href="#" class="polaroid img7"><img src="http://media.24ways.org/2009/14/img/simon.jpg" alt="" class="img-fluid">Simon in a giant Kiwi, pretending to be a Kiwi (the bird)</a>
-        <a href="#" class="small polaroid img8"><img src="http://media.24ways.org/2009/14/img/albatross.jpg" alt="" class="img-fluid">Albatross in Dunedin</a>
-        <a href="#" class="medium polaroid img9"><img src="http://media.24ways.org/2009/14/img/raft.jpg" alt="" class="img-fluid">White water rafting in Queenstown</a>
-        <a href="#" class="polaroid img10"><img src="http://media.24ways.org/2009/14/img/whiteisland.jpg" alt="" class="img-fluid">White Island</a>
-        <a href="#" class="small polaroid img11"><img src="http://media.24ways.org/2009/14/img/sulphur.jpg" alt="" class="img-fluid">Sulphurous</a>
-        <a href="#" class="small polaroid img12"><img src="http://media.24ways.org/2009/14/img/sealions.jpg" alt="" class="img-fluid">Sea lions!</a>
-        <a href="#" class="small polaroid img13"><img src="http://media.24ways.org/2009/14/img/horses.jpg" alt="" class="img-fluid">Horse riding</a>
-        <a href="#" class="small polaroid img14"><img src="http://media.24ways.org/2009/14/img/camping.jpg" alt="" class="img-fluid">Stewart Island</a>
-        <a href="#" class="polaroid img15"><img src="http://media.24ways.org/2009/14/img/us.jpg" alt="" class="img-fluid">Us in a blue cave on the Franz Josef glacier</a>
+        <a href="#" class="polaroid img7"><img src="{% static '/images/phrase.jpg' %}" alt="" class="img-fluid">Lorem ipsum dolor sit amet</a>
+        <a href="#" class="small polaroid img8"><img src="{% static '/images/tears.jpg' %}" alt="" class="img-fluid">Lorem ipsum dolor sit amet</a>
+        <a href="#" class="medium polaroid img9"><img src="{% static '/images/fear.png' %}" alt="" class="img-fluid">Lorem ipsum dolor sit amet</a>
+        <a href="#" class="polaroid img10"><img src="{% static '/images/advice.jpg' %}" alt="" class="img-fluid">Lorem ipsum dolor sit amet</a>
+        <a href="#" class="small polaroid img11"><img src="{% static '/images/holiday.jpg' %}" alt="" class="img-fluid">Lorem ipsum dolor sit amet</a>
+        <a href="#" class="small polaroid img12"><img src="{% static '/images/tube.png' %}" alt="" class="img-fluid">Lorem ipsum dolor sit amet</a>
+        <a href="#" class="small polaroid img13"><img src="{% static '/images/flag.png' %}" alt="" class="img-fluid">Lorem ipsum dolor sit amet</a>
+        <a href="#" class="small polaroid img14"><img src="{% static '/images/london.png' %}" alt="" class="img-fluid">Lorem ipsum dolor sit amet</a>
+        <a href="#" class="polaroid img15"><img src="{% static '/images/dinner.jpg' %}" alt="" class="img-fluid">Lorem ipsum dolor sit amet</a>
     </div>
     <div class="about-text container card">
         <div class="row">
@@ -46,6 +46,7 @@
                         If I’m unavailable for a job I’ll be happy to recommend a suitable colleague
                         who may be free to help, because I’m good that way….<br/>
                         Thanks for visiting</p>
+                        <img src="{% static '/images/signature.jpg' %}" alt="" class="img-fluid signature"/>
             </div>
         </div>
     </div>
