--- a/IanPortfolio/static/css/collage.css
+++ b/IanPortfolio/static/css/collage.css
@@ -55,7 +55,7 @@ a.polaroid:active {
     -webkit-transform: rotate(0deg);
     -moz-transform: rotate(0deg);
     transform: rotate(0deg);
-    color: rgb(132, 184, 23) !important;
+    color: rgb(155, 0, 86) !important;
 }
 .polaroid img {
     margin: 0 0 15px;
@@ -70,7 +70,7 @@ a img {
 
 .photo-album {
     position: relative;
-    width: 80%;
+    width: 100%;
     margin: 0 auto;
     max-width: 70em;
     height: 450px;
@@ -95,9 +95,8 @@ a img {
     -webkit-box-shadow: 2px 2px 4px rgba(0,0, 0, 0.3);
     -moz-box-shadow: 2px 2px 4px rgba(0,0, 0, 0.3);
     box-shadow: 2px 2px 4px rgba(0,0, 0, 0.3);
-    border: 2px solid rgb(132, 184, 23);
+    border: 2px solid rgb(155, 0, 86);
     text-transform: uppercase;
-    font-family: 'HillHouse';
 }
 .photo-album .small {
     width: 75px;
@@ -238,7 +237,7 @@ a:focus {
 }
 
 .collage-title {
-    color: rgba(132, 184, 23, 0.8);
+    color: rgba(155, 0, 86, 0.8);
     font-size: 4vw;
     text-shadow: 0px 3px 50px rgba(0, 0, 0, 0.5);
 }
@@ -252,5 +251,8 @@ a:focus {
         margin-top: 5em;
         min-width: auto;
         max-width: auto;
+    }
+    .collage-title {
+      font-size: 8vw;
     }
   }
