Add Tearsheets and Update Home

--- a/templates/pages/about.html
+++ b/templates/pages/about.html
@@ -5,7 +5,7 @@
 <div class="photo-album-container">
     <div class="photo-album">
     
-        <h1 class="collage-title"><span>About Me</span></h1>
+        <h1 class="collage-title willow"><span>About Me</span></h1>
                 
         <a href="#" class="large polaroid img1"><img src="{% static '/images/tyre.jpg' %}" alt="" class="img-fluid">Lorem ipsum dolor sit amet</a>
         <a href="#" class="polaroid img2"><img src="{% static '/images/hat.jpg' %}" alt="" class="img-fluid">Lorem ipsum dolor sit amet</a>
@@ -31,10 +31,26 @@
     <div class="about-text container card">
         <div class="row">
             <div class="col-md-12">
-                <h1>Welcome &amp; Thanks for visiting</h1>
+                <h1 class="willow">Welcome &amp; Thanks for visiting</h1>
             </div>
         </div>
         <br/>
+        <div class="row">
+            <div class="col-md-12">
+                <p>Since you ask…
+
+                        Born & raised in Scotland, I completed a B.SC in Pure Mathematics before relocating to London to study photojournalism and launch my photographic career in 1985.
+                        
+                        Although I began working for magazines & PR companies, I’ve worked extensively for the retail, financial, legal & technology sectors and my work has featured in many newspapers, magazines, adverts, annual reports & corporate communications publications.
+                        
+                        I’m a visiting lecturer at the University for the Arts, London since 1995 where I taught Professional Photographic Practice and more recently I’ve been a tutor on the Graduate Diploma in Photography course.
+                        
+                        Over the years I’ve hosted free workshops for many clients on working effectively with photographers, getting press releases published and taking better pictures.
+                        
+                        I live with my redhead wife Susan & our two cats in the tax haven & tropical paradise of South East London.
+                        </p>
+            </div>
+        </div>
         <div class="row">
             <div class="col-md-12">
                 <p>Thanks for taking the time to look at my work.
