--- a/IanPortfolio/static/css/main.css
+++ b/IanPortfolio/static/css/main.css
@@ -25,8 +25,12 @@ html {
     width: 100%;
     height: 100vh;
     overflow-x: hidden;
-    font-family: 'Willow';
+    font-family: 'Raleway', sans-serif;
     text-transform: uppercase;
+}
+
+.willow {
+	font-family: 'Willow', sans-serif;
 }
 
 .about-text{
@@ -45,11 +49,19 @@ html {
 	font-family: "Raleway",Arial,Helvetica,sans-serif;
 }
 
+.caption {
+	font-family: 'Willow', sans-serif;
+}
+
 /*NAVBAR*/
 
 .navbar{
 	padding-top: 0 !important;
 	padding-bottom: 0 !important;
+}
+
+.navbar-nav {
+	font-family: 'Willow', sans-serif;
 }
 
 .btn {
@@ -227,9 +239,167 @@ html {
 	margin: 1rem;
 }
 
+.name {
+	text-transform: capitalize;
+}
+
+.email {
+	text-transform: lowercase;
+}
+
 @media only screen and (max-width: 800px) {
     .about-text{
         margin: 10rem auto 10rem auto;
         padding: 2rem;
     }
+  }
+
+/*Tearsheets*/
+
+*, *:before, *:after {
+	box-sizing: border-box;
+	margin: 0;
+	padding: 0;
+  }
+  
+  .demo-container {
+	width: 100vw;
+	height: 100vh;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	overflow: hidden;
+	position: relative;
+	cursor: grab;
+	user-select: none;
+  }
+  
+  a {
+	color: white;
+  }
+  
+  .transparent-bg {
+	width: 100vw;
+	height: 100vh;
+	background-position: center;
+	background-size: cover;
+	position: absolute;
+	left: 0;
+	top: 0;
+  }
+  
+  .trans-bg {
+	width: 100%;
+	height: 100%;
+	position: absolute;
+	opacity: 0;
+	background-size: cover;
+	background-position: center;
+	left: 0;
+	top: 0;
+	transition: all 0.3s linear;
+	will-change: opacity;
+	transform: translate3d(0, 0, 0);
+	-webkit-transition: all 0.3s linear;
+	-moz-transition: all 0.3s linear;
+	-ms-transition: all 0.3s linear;
+	-o-transition: all 0.3s linear;
+}
+  
+  .grabbing {
+	cursor: grabbing;
+  }
+  
+  .trans-bg-active {
+	opacity: 0.35;  
+  }
+  
+  .photo-container {
+	position: relative;
+  }
+  
+  .photo {
+	width: 100%;
+	height: 100%;
+	background-size: cover;
+	background-position: center;  
+	border-radius: 4px;
+	position: absolute;
+	opacity: 0;
+	transform: translate3d(105vw, 0, 0);
+	will-change: transform, opacity;
+	z-index: 1;
+	color: white;
+	font-family: "Montserrat", sans-serif;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+  }
+  
+  .caption {
+	background: rgba(0, 0, 0, 0.7);
+	padding: 5px;
+	border-radius: 4px;
+	font-size: 1.3rem;
+  }
+  
+  .photo-0 {
+	background-image: url(../images/city.jpg);
+  }
+  
+  .photo-1 {
+	background-image: url(../images/fear.jpg);
+  }
+  
+  .photo-2 {
+	background-image: url(../images/fire.jpg);
+  }
+  
+  .photo-3 {
+	background-image: url(../images/tearsheet.jpg);
+  }
+  
+  .photo-4 {
+	background-image: url(../images/B&M.jpg);
+  }
+  
+  .photo-5 {
+	background-image: url(../images/hero.jpg);
+  }
+  
+  .photo-active {
+	transform: none;
+	opacity: 1;
+  }
+  
+  .photo-left {
+	transform: translate3d(-105vw, 0, 0);
+  }
+  
+  .animation {
+	transition: all 0.3s ease-out;
+	-webkit-transition: all 0.3s ease-out;
+	-moz-transition: all 0.3s ease-out;
+	-ms-transition: all 0.3s ease-out;
+	-o-transition: all 0.3s ease-out;
+}
+  
+  .indicator {
+	position: absolute;
+	top: 100%;
+	left: 50%;
+	text-align: center;
+	font-family: "Montserrat", sans-serif; 
+	transform: translate(-50%, -102%);
+	padding: 2px;
+	border-radius: 4px;
+	z-index: 2;
+	background: rgba(0, 0, 0, 0.6);
+	color: white;
+  }
+  
+  @media only screen and (max-width: 360px) {
+	.caption {
+	  font-size: 0.9rem;
+	}
   }
