--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -2,20 +2,52 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block content %}
-    <div id="shape_contain">
-        <div id="circle"></div>
-        <div id="tri1"></div>
-        <div id="strip1" class="strip"></div>
-        <div id="tri2" class="hinge"></div>
-        <div id="tri3"></div>
-        <div id="strip2" class="strip"></div>
-        <div id="strip3" class="strip"></div>
-        <div id="leftside"></div>
-        <div id="rightside"></div>
-        <div id="topLeft">
-            <br><span></span></div>
-        <div id="topRight1"></div>
-        <div id="headline">Ian Macaulay</div>
-
-    </div>
+<div class="demo-container">
+    <div class="transparent-bg"></div>
+        <div class="photo-container">
+          <div class="photo photo-active photo-0">
+            <div id="shape_contain">
+                <div id="circle"></div>
+                <div id="tri1"></div>
+                <div id="strip1" class="strip"></div>
+                <div id="tri2" class="hinge"></div>
+                <div id="tri3"></div>
+                <div id="strip2" class="strip"></div>
+                <div id="strip3" class="strip"></div>
+                <div id="leftside"></div>
+                <div id="rightside"></div>
+                <div id="topLeft">
+                    <br><span></span></div>
+                <div id="topRight">DRAG</div>
+                <div id="headline" class="willow">Ian Macaulay</div>
+            </div>   
+          </div>
+          <div class="photo photo-1">
+                <div class="caption">
+                    <a class="nav-item btn btn-6-blue btn-6a-blue" href="{% url 'about' %}" target="_blank">About</a>
+                </div>
+          </div>
+          <div class="photo photo-2">
+            <div class="caption">
+                <a class=" nav-item btn btn-6-l-blue btn-6a-l-blue" href="#" target="_blank">Work</a>
+            </div>
+          </div>
+          <div class="photo photo-3">
+            <div class="caption">
+                <a class=" nav-item btn btn-6-green btn-6a-green" href="#" target="_blank">Tearsheets</a>
+            </div>
+          </div>
+          <div class="photo photo-4">
+            <div class="caption">
+                <a class=" nav-item btn btn-6-yellow btn-6a-yellow" href="#" target="_blank">Testimonials</a>
+            </div>
+          </div>
+          <div class="photo photo-5">
+            <div class="caption">
+                <a class=" nav-item btn btn-6-red btn-6a-red" href="#" target="_blank">Blog</a>
+            </div>
+          </div>
+          <div class="indicator"></div>
+        </div>
+      </div>
 {% endblock %}
