Add navlink to navbar

--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -39,14 +39,19 @@
           </div>
           <div class="photo photo-4">
             <div class="caption">
-                <a class=" nav-item btn btn-6-yellow btn-6a-yellow" href="#" target="_blank">Testimonials</a>
+                <a class=" nav-item btn btn-6-orange btn-6a-orange" href="#" target="_blank">Exhibitions</a>
             </div>
           </div>
           <div class="photo photo-5">
             <div class="caption">
-                <a class=" nav-item btn btn-6-red btn-6a-red" href="#" target="_blank">Blog</a>
+                <a class=" nav-item btn btn-6-yellow btn-6a-yellow" href="#" target="_blank">Testimonials</a>
             </div>
           </div>
+          <div class="photo photo-6">
+              <div class="caption">
+                  <a class=" nav-item btn btn-6-red btn-6a-red" href="#" target="_blank">Blog</a>
+              </div>
+            </div>
           <div class="indicator"></div>
         </div>
       </div>
