--- a/IanPortfolio/static/css/main.css
+++ b/IanPortfolio/static/css/main.css
@@ -64,6 +64,10 @@ html {
 	font-family: 'Willow', sans-serif;
 }
 
+.nav-item {
+	padding: 0 !important;
+}
+
 .btn {
 	border: none;
 	font-family: inherit;
@@ -182,6 +186,29 @@ html {
 .btn-6a-green:hover {
     background: transparent;
 	color: 	#00782A	;
+}
+
+/* Button 6 orange*/
+.btn-6-orange {
+	color: #fff;
+-webkit-transition: none;
+-moz-transition: none;
+transition: none;
+background: 	#EE7C0E	;
+}
+
+.btn-6-green:active {
+top: 2px;
+}
+
+/* Button 6a */
+.btn-6a-orange {
+border: 4px solid 	#EE7C0E	;
+}
+
+.btn-6a-orange:hover {
+	background: transparent;
+color: 		#EE7C0E	;
 }
 
 /* Button 6 yellow*/
@@ -359,13 +386,17 @@ html {
 	background-image: url(../images/tearsheet.jpg);
   }
   
-  .photo-4 {
+  .photo-5 {
 	background-image: url(../images/B&M.jpg);
   }
   
-  .photo-5 {
+  .photo-6 {
 	background-image: url(../images/hero.jpg);
-  }
+	}
+	
+	.photo-4 {
+		background-image: url(../images/red.jpg);
+		}
   
   .photo-active {
 	transform: none;
