Add logo and Update fonts

--- a/templates/pages/about.html
+++ b/templates/pages/about.html
@@ -30,7 +30,7 @@
     </div>
     <div class="about-text container card">
         <div class="row">
-            <div class="col-md-12">
+            <div class="col-md-12 mb-2">
                 <h1 class="willow">Welcome &amp; Thanks for visiting</h1>
             </div>
         </div>
