--- a/IanPortfolio/static/css/main.css
+++ b/IanPortfolio/static/css/main.css
@@ -25,12 +25,12 @@ html {
     width: 100%;
     height: 100vh;
     overflow-x: hidden;
-    font-family: 'Raleway', sans-serif;
+    font-family: 'Raleway', serif;
     text-transform: uppercase;
 }
 
 .willow {
-	font-family: 'Willow', sans-serif;
+	font-family: 'Willow', 'Tulpen One', serif;
 }
 
 .about-text{
@@ -46,11 +46,11 @@ html {
 }
 
 .email {
-	font-family: "Raleway",Arial,Helvetica,sans-serif;
+	font-family: 'Raleway',sans-serif;
 }
 
 .caption {
-	font-family: 'Willow', sans-serif;
+	font-family: 'Willow', 'Tulpen One', serif;
 }
 
 /*NAVBAR*/
@@ -61,7 +61,7 @@ html {
 }
 
 .navbar-nav {
-	font-family: 'Willow', sans-serif;
+	font-family: 'Willow', 'Tulpen One', serif;
 }
 
 .nav-item {
@@ -77,7 +77,7 @@ html {
 	cursor: pointer;
 	display: inline-block;
 	margin: 15px 30px;
-	text-transform: uppercase;
+	text-transform: capitalize;
 	letter-spacing: 1px;
 	font-weight: 700;
 	outline: none;
@@ -274,12 +274,9 @@ color: 		#EE7C0E	;
 	text-transform: lowercase;
 }
 
-@media only screen and (max-width: 800px) {
-    .about-text{
-        margin: 10rem auto 10rem auto;
-        padding: 2rem;
-    }
-  }
+.home-mobile {
+	display: none;
+}
 
 /*Tearsheets*/
 
@@ -427,6 +424,19 @@ color: 		#EE7C0E	;
 	z-index: 2;
 	background: rgba(0, 0, 0, 0.6);
 	color: white;
+	}
+	
+	@media only screen and (max-width: 800px) {
+    .about-text{
+        margin: 10rem auto 10rem auto;
+        padding: 2rem;
+		}
+		.demo-container {
+			display: none;
+		}
+		.home-mobile {
+			display: block;
+		}
   }
   
   @media only screen and (max-width: 360px) {
