--- a/templates/partials/_navbar.html
+++ b/templates/partials/_navbar.html
@@ -1,7 +1,7 @@
 {% load static %}
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark" >
+<nav class="navbar navbar-expand-xl navbar-dark bg-dark" >
       <a class="navbar-brand" href="{% url 'index' %}">
-        <img src="{% static 'img/white-logo.png' %}" alt="" class="img-fluid" style="width: auto; height: 10vh;">
+        <img src="{% static 'images/logo-ian.png' %}" alt="" class="img-fluid" style="width: auto; height: 8vh;">
       </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample04" aria-controls="navbarsExample04" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
