Add animation home page

--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -19,7 +19,7 @@
         <div id="topLeft">
           <br><span></span></div>
         <div id="topRight">DRAG</div>
-        <div id="headline" class="willow">Ian Macaulay</div>
+        <div id="headline" class="willow bounceOut">Ian Macaulay</div>
       </div>
     </div>
     <div class="photo photo-1">
@@ -69,7 +69,7 @@
     <div id="topLeft">
       <br><span></span></div>
     <div id="topRightr"></div>
-    <div id="headline" class="willow">Ian Macaulay</div>
+    <div id="headline" class="willow bounceOut">Ian Macaulay</div>
   </div>
 </div>
 {% endblock %}
