--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -24,32 +24,32 @@
     </div>
     <div class="photo photo-1">
       <div class="caption">
-        <a class="nav-item btn btn-6-blue btn-6a-blue" href="{% url 'about' %}" target="_blank">About</a>
+        <a class="nav-item btn btn-6-blue btn-6a-blue" href="{% url 'about' %}" >About</a>
       </div>
     </div>
     <div class="photo photo-2">
       <div class="caption">
-        <a class=" nav-item btn btn-6-l-blue btn-6a-l-blue" href="#" target="_blank">Work</a>
+        <a class=" nav-item btn btn-6-l-blue btn-6a-l-blue" href="#" >Work</a>
       </div>
     </div>
     <div class="photo photo-3">
       <div class="caption">
-        <a class=" nav-item btn btn-6-green btn-6a-green" href="#" target="_blank">Tearsheets</a>
+        <a class=" nav-item btn btn-6-green btn-6a-green" href="#">Tearsheets</a>
       </div>
     </div>
     <div class="photo photo-4">
       <div class="caption">
-        <a class=" nav-item btn btn-6-orange btn-6a-orange" href="#" target="_blank">Exhibitions</a>
+        <a class=" nav-item btn btn-6-orange btn-6a-orange" href="#" >Exhibitions</a>
       </div>
     </div>
     <div class="photo photo-5">
       <div class="caption">
-        <a class=" nav-item btn btn-6-yellow btn-6a-yellow" href="#" target="_blank">Testimonials</a>
+        <a class=" nav-item btn btn-6-yellow btn-6a-yellow" href="#">Testimonials</a>
       </div>
     </div>
     <div class="photo photo-6">
       <div class="caption">
-        <a class=" nav-item btn btn-6-red btn-6a-red" href="#" target="_blank">Blog</a>
+        <a class=" nav-item btn btn-6-red btn-6a-red" href="#" >Blog</a>
       </div>
     </div>
     <div class="indicator"></div>
