--- a/IanPortfolio/static/css/lightgallery.css
+++ b/IanPortfolio/static/css/lightgallery.css
@@ -406,6 +406,7 @@ body:not(.lg-from-hash) .lg-outer.lg-start-zoom .lg-item.lg-complete .lg-object 
   -webkit-overflow-scrolling: touch;
   overflow: auto;
 }
+/* 
 .lg-outer .lg-has-vimeo .lg-video-play {
   background: url("../img/vimeo-play.png") no-repeat scroll 0 0 transparent;
 }
@@ -428,7 +429,7 @@ body:not(.lg-from-hash) .lg-outer.lg-start-zoom .lg-item.lg-complete .lg-object 
 }
 .lg-outer .lg-has-youtube:hover .lg-video-play {
   background: url("../img/youtube-play.png") no-repeat scroll 0 -60px transparent;
-}
+} */
 .lg-outer .lg-video-object {
   width: 100% !important;
   height: 100% !important;
