--- a/templates/pages/about2.html
+++ b/templates/pages/about2.html
@@ -12,7 +12,7 @@
                     <img src="{% static '/images/signature.jpg' %}" alt="" class="img-fluid signature"/>
     </div>
     <div class="col-4">
-            <img src="{% static '/images/pic.jpg' %}" alt="" class="img-fluid signature"/>
+            <img src="{% static '/images/pic.jpg' %}" alt="" class="img-fluid"/>
     </div>
     <div class="col-4">
             <p><strong>Since you ask…</strong>
